--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BadInteger" xml:space="preserve">
+    <value>{0} is not a number: {1}</value>
+  </data>
   <data name="BrowsePrompt" xml:space="preserve">
     <value>Select destination folder for transformed files.  Use context menu to create a new folder.</value>
   </data>
@@ -163,8 +166,20 @@ Command line options are:
  &lt;overrides&gt; allows you to override values before the transform using name=value any number of times.
 </value>
   </data>
+  <data name="MaxInt" xml:space="preserve">
+    <value>{0} must be less than {1}</value>
+  </data>
+  <data name="MaxStrLen" xml:space="preserve">
+    <value>{0} can contain no more than {1} characters </value>
+  </data>
   <data name="MinCount" xml:space="preserve">
     <value>{0} must have at least {1} items</value>
+  </data>
+  <data name="MinInt" xml:space="preserve">
+    <value>{0} must be greater than {1}</value>
+  </data>
+  <data name="MinStrLen" xml:space="preserve">
+    <value>{0} must have at least {1} characters long</value>
   </data>
   <data name="NoSave" xml:space="preserve">
     <value>NoSave option specified that prevented saving values.</value>
@@ -174,7 +189,7 @@ Command line options are:
 {1}</value>
   </data>
   <data name="SettingsException" xml:space="preserve">
-    <value>Continuing after exception loading settings:</value>
+    <value>Continuing after exception loading settings: {0}</value>
   </data>
   <data name="Success" xml:space="preserve">
     <value>Success! Processed {0} files in {2:f2} secs to {1}</value>
