--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BadInteger" xml:space="preserve">
-    <value>{0} is not a number: {1}</value>
+    <value>{0} is not a number: "{1}"</value>
   </data>
   <data name="BrowsePrompt" xml:space="preserve">
     <value>Select destination folder for transformed files.  Use context menu to create a new folder.</value>
@@ -137,8 +137,23 @@
   <data name="DestMustExist" xml:space="preserve">
     <value>Destination folder must exist. {0}</value>
   </data>
+  <data name="ErrorCreatingCustom" xml:space="preserve">
+    <value>Failed to create object from </value>
+  </data>
+  <data name="ErrorCustomType" xml:space="preserve">
+    <value>Could not create custom type from</value>
+  </data>
   <data name="ErrorLoadingChildXml" xml:space="preserve">
     <value>Error loading child XML file {0}: {1}</value>
+  </data>
+  <data name="ErrorNullCustomClassName" xml:space="preserve">
+    <value>class on custom named</value>
+  </data>
+  <data name="ErrorNullCustomName" xml:space="preserve">
+    <value>name on custom</value>
+  </data>
+  <data name="ErrorNullEnumName" xml:space="preserve">
+    <value>name on enum</value>
   </data>
   <data name="ExceptionFormat" xml:space="preserve">
     <value>Exception!
