--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -155,6 +155,9 @@
   <data name="DestMustExist" xml:space="preserve">
     <value>Destination folder must exist. {0}</value>
   </data>
+  <data name="EnumScriptTimeout" xml:space="preserve">
+    <value>Timed out waiting on enum {0}'s script "{1}" to run.</value>
+  </data>
   <data name="ErrorCreatingCustom" xml:space="preserve">
     <value>Failed to create object from </value>
   </data>
@@ -166,6 +169,9 @@
   </data>
   <data name="ErrorCustomType" xml:space="preserve">
     <value>Could not create custom type from</value>
+  </data>
+  <data name="ErrorInEnumScript" xml:space="preserve">
+    <value>Error executing enum script "{0}": {1}</value>
   </data>
   <data name="ErrorLoadingChildXml" xml:space="preserve">
     <value>Error loading child XML file {0}: {1}</value>
@@ -199,12 +205,13 @@
     <value>{0}RazorTranformation Tool transforms an object described in &lt;objectFile&gt;into all the files in a &lt;templateFolder&gt;
 
 Command line options are:
-   [-run] [-object &lt;objectFile&gt;] [-values &lt;valuesFile&gt;] [-output &lt;outputFolder&gt;] [-template &lt;templateFolder&gt; [-logFile &lt;logFile&gt;] [-test] [-nosave] [-h|-?] [&lt;overrides....&gt;] 
+   [-run] [-object &lt;objectFile&gt;] [-values &lt;valuesFile&gt;] [-output &lt;outputFolder&gt;] [-template &lt;templateFolder&gt; [-logFile &lt;logFile&gt;] [-test] [-nosave] [-h|-?] [&lt;overrides....&gt;] [-powerShell] 
 
    -h -? show this help
   -test runs the transforms without saving the output to make sure Razor views work
   -nosave does not save the override values in &lt;objectFile&gt;, useful when using overrides 
   -run runs transforms without pulling up the UI, and the file and folder must exist.  Output is written to &lt;logfile&gt;
+  -powerShell runs any PowerShell commands in xml.  See documenation for details
 
  &lt;objectFile&gt; defaults to .\RtObject.xml
  &lt;valuesFile&gt;defaults to .\RtValues
@@ -217,6 +224,9 @@ Command line options are:
   <data name="IndexOutOfRange" xml:space="preserve">
     <value>"Index out of range for "{0}": {1}[{2}]"</value>
   </data>
+  <data name="InvalidEnumScript" xml:space="preserve">
+    <value>Script specified in enum {0}, "{1}" was not found.</value>
+  </data>
   <data name="InvalidUri" xml:space="preserve">
     <value>Invalid Uri: </value>
   </data>
@@ -227,22 +237,25 @@ Command line options are:
     <value>"{0}" has {2} items, but must have no more than {1}.</value>
   </data>
   <data name="MaxInt" xml:space="preserve">
-    <value>"{0}" is {2} but must be less than {1}.</value>
+    <value>"{0}" is {2} but must be less than {3}.</value>
   </data>
   <data name="MaxStrLen" xml:space="preserve">
-    <value>"{0}" with a value of "{3}" must contain no more than {1} characters, but has {2}.</value>
+    <value>"{0}" with a value of "{1}" must contain no more than {3} characters, but has {2}.</value>
   </data>
   <data name="MinCount" xml:space="preserve">
     <value>"{0}" has {2} items, but must have at least {1}.</value>
   </data>
   <data name="MinInt" xml:space="preserve">
-    <value>"{0}" is {2} but must be greater than {1}. </value>
+    <value>"{0}" is {1} but must be greater than {3}. </value>
   </data>
   <data name="MinStrLen" xml:space="preserve">
-    <value>"{0}" with a value of "{3}" must contain at least {1} characters, but has {2}.</value>
+    <value>"{0}" with a value of "{1}" must contain at least {3} characters, but has {2}.</value>
   </data>
   <data name="NewItem" xml:space="preserve">
     <value>Add</value>
+  </data>
+  <data name="NoEnumContent" xml:space="preserve">
+    <value>Nothing found for enum {0} after executing script "{1}"</value>
   </data>
   <data name="NoSave" xml:space="preserve">
     <value>NoSave option specified that prevented saving values.</value>
@@ -253,6 +266,12 @@ Command line options are:
   </data>
   <data name="ProcessingTransforms" xml:space="preserve">
     <value>Processing transforms...</value>
+  </data>
+  <data name="RangeInt" xml:space="preserve">
+    <value>"{0}" is {1} but must be between {3} and {4}.</value>
+  </data>
+  <data name="RangeStrLen" xml:space="preserve">
+    <value>"{0}" has a value of "{1}" and length of {2} but length must be between {3} and {4}</value>
   </data>
   <data name="RegExNotFound" xml:space="preserve">
     <value>Regular expression "{0}" not found in configuration</value>
