--- a/Resources/Resource.resx
+++ b/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BadEnum" xml:space="preserve">
+    <value>Enum value "{1}" not found for enum "{0}"</value>
+  </data>
   <data name="BadInteger" xml:space="preserve">
     <value>{0} is not a number: "{1}"</value>
   </data>
